feat: source implementation (#2)